# code2snippets

./: .code2snippet.json.example  .gitignore  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  code2snippet  configure.ac  test_input.cpp
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile.am  config.cpp  main.cpp
